--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,9 +1,10 @@
 /* universal styling */
 
-body {
+html {
   background-color: black;
   color: white;
 }
+
 
 /* header */
 
@@ -11,8 +12,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
-  padding-top: 30px;
 }
 
 .flex-container img {
@@ -39,4 +38,16 @@ body {
   margin: 100px;
   padding-top: 10px;
   padding-left: 20px;
+}
+
+/* navigation */
+
+.flex-navigation {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 30px;
+  background-color: #B00024;
+  height: 40px;
+  width: 918px;
 }
