--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,8 @@
 html {
   background-color: black;
   color: white;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 
@@ -18,6 +20,12 @@ html {
   padding-right: 15px;
   height: 20px;
   width: auto;
+}
+
+.nav {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 100px;
 }
 
 /* body */
@@ -40,7 +48,7 @@ html {
   padding-left: 20px;
 }
 
-/* navigation */
+/* navigation mid-body */
 
 .flex-navigation {
   display: flex;
